--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ MONGODB_NAME=artemis-web
 # LDAP configuration
 LDAP_ENABLED=true
 LDAP_HOST=ldap
-LDAP_PORT=389
+LDAP_PORT=10389
 LDAP_PROTOCOL=ldap
 LDAP_BIND_DN="cn=admin,dc=planetexpress,dc=com"
 LDAP_BIND_SECRET="GoodNewsEveryone"
@@ -22,3 +22,19 @@ LDAP_SEARCH_BASE="ou=people,dc=planetexpress,dc=com"
 LDAP_SEARCH_FILTER="(mail={{username}})"
 LDAP_SEARCH_ATTRIBUTES="mail, uid"
 LDAP_EMAIL_FIELDNAME=mail
+LDAP_ADMIN_GROUP=admin_staff
+
+# API HOSTS
+CONFIG_HOST=configuration
+CONFIG_PORT=3000
+API_HOST=postgrest
+API_PORT=3000
+DATABASE_HOST=database
+
+RABBITMQ_USER=guest
+RABBITMQ_PASS=guest
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+
+# LDAP USER MAPPING
+LDAP_USER_GROUP=
