--- a/.github/workflows/cypress-ci.yml
+++ b/.github/workflows/cypress-ci.yml
@@ -15,8 +15,7 @@ jobs:
     # runs all of the steps inside the specified container rather than on the VM host.
     # Because of this the network configuration changes from host based network to a container network.
     container:
-      image: cypress/included:3.2.0
-
+      image: cypress/included:6.6.0
     services:
       mongodb:
         image: mongo
@@ -32,9 +31,9 @@ jobs:
           - '636:636'
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - run: yarn install --frozen-lockfile
-      - run: yarn run nx e2e artemis-web-e2e
+      - run: yarn run nx e2e artemis-web-e2e --browser chrome
         env:
           MONGODB_HOST: mongodb
           MONGODB_PORT: ${{ job.services.mongodb.ports[27017] }}
