--- a/package.json
+++ b/package.json
@@ -24,18 +24,22 @@
     "update": "nx migrate latest",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "reactide-server": "webpack-dev-server --config reactide.config.js --mode development --hot"
   },
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.2.1",
+    "@apollo/client": "^3.3.7",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.11.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.34",
     "@types/react-bootstrap-table-next": "^4.0.3",
+    "amqp-ts": "^1.8.0",
     "argon2": "^0.27.0",
     "chance": "^1.1.7",
-    "codemirror": "^5.58.3",
+    "codemirror": "^5.59.2",
+    "cross-fetch": "^3.0.6",
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
     "graphql": "^15.3.0",
@@ -49,62 +53,82 @@
     "passport-ldapauth": "^3.0.1",
     "passport-local": "^1.0.0",
     "passport-remember-me": "0.0.1",
-    "react": "16.13.1",
+    "react": "17.0.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-burger-menu": "^3.0.2",
     "react-codemirror2": "^7.2.1",
-    "react-dom": "16.13.1",
+    "react-dom": "17.0.1",
+    "react-ios-switch": "^0.1.19",
+    "react-media": "^2.0.0-rc.1",
+    "react-minimal-datetime-range": "^1.6.0",
     "react-spring": "^8.0.27",
-    "react-toastify": "^6.1.0",
+    "react-toastify": "^7.0.3",
     "react-toolkit": "^2.0.0-alpha.3",
     "react-tooltip": "^4.2.11",
     "subscriptions-transport-ws": "^0.9.18",
-    "swr": "^0.1.16",
-    "tslib": "^2.0.3",
+    "swr": "^0.4.2",
+    "tslib": "^2.1.0",
+    "typescript-rabbitmq": "^0.0.8",
     "validator": "^13.1.17"
   },
   "devDependencies": {
-    "@babel/core": "7.9.6",
-    "@babel/preset-env": "7.9.6",
-    "@babel/preset-react": "7.9.4",
-    "@babel/preset-typescript": "7.9.0",
-    "@nrwl/cypress": "10.2.0",
-    "@nrwl/eslint-plugin-nx": "10.2.0",
-    "@nrwl/jest": "10.2.0",
-    "@nrwl/next": "10.2.0",
-    "@nrwl/react": "10.2.0",
-    "@nrwl/web": "10.2.0",
-    "@nrwl/workspace": "10.2.0",
-    "@testing-library/react": "10.4.1",
-    "@types/jest": "26.0.8",
-    "@types/node": "~8.9.4",
+    "@babel/cli": "^7.0.0-beta.40",
+    "@babel/core": "^7.0.0-beta.40",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0-beta.0",
+    "@babel/preset-typescript": "7.12.13",
+    "@nrwl/cypress": "11.2.10",
+    "@nrwl/eslint-plugin-nx": "11.2.10",
+    "@nrwl/jest": "11.2.10",
+    "@nrwl/next": "11.2.10",
+    "@nrwl/react": "11.2.10",
+    "@nrwl/web": "11.2.10",
+    "@nrwl/workspace": "11.2.10",
+    "@testing-library/react": "11.2.5",
+    "@types/jest": "26.0.20",
+    "@types/node": "~14.14.25",
     "@types/passport": "^1.0.4",
-    "@types/react": "16.9.38",
-    "@types/react-dom": "16.9.8",
-    "@typescript-eslint/eslint-plugin": "2.19.2",
-    "@typescript-eslint/parser": "2.19.2",
-    "babel-jest": "26.2.2",
-    "cypress": "^4.1.0",
-    "dotenv": "6.2.0",
+    "@types/react": "17.0.1",
+    "@types/react-dom": "17.0.0",
+    "@typescript-eslint/eslint-plugin": "4.15.0",
+    "@typescript-eslint/parser": "4.15.0",
+    "babel-jest": "26.6.3",
+    "babel-loader": "^8.0.0-beta.0",
+    "css-loader": "^5.0.2",
+    "cypress": "^6.4.0",
+    "dotenv": "8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "6.0.0",
+    "eslint": "7.19.0",
+    "eslint-config-prettier": "7.2.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.21.2",
-    "eslint-plugin-jsx-a11y": "6.3.1",
-    "eslint-plugin-react": "7.20.0",
-    "eslint-plugin-react-hooks": "4.0.4",
-    "husky": "^4.3.0",
-    "jest": "26.2.2",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.0.0",
+    "husky": "^5.0.9",
+    "jest": "26.6.3",
     "jest-fetch-mock": "^3.0.3",
-    "msw": "^0.21.3",
-    "prettier": "2.0.4",
-    "ts-jest": "26.1.4",
-    "ts-node": "~7.0.0",
-    "typescript": "~3.9.3"
+    "msw": "^0.26.1",
+    "node-sass": "^5.0.0",
+    "prettier": "2.2.1",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "ts-jest": "26.5.0",
+    "ts-node": "~9.1.1",
+    "typescript": "~4.1.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.7.0"
   },
   "husky": {
     "hooks": {
