--- a/package.json
+++ b/package.json
@@ -48,9 +48,9 @@
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
     "next": "^10.2.0",
-    "next-connect": "^0.9.0",
+    "next-connect": "^0.10.1",
     "next-csrf": "^0.1.1",
-    "next-session": "^3.3.2",
+    "next-session": "^3.4.0",
     "passport": "^0.4.1",
     "passport-ldapauth": "^3.0.1",
     "passport-local": "^1.0.0",
@@ -104,7 +104,7 @@
     "babel-jest": "26.6.3",
     "babel-loader": "^8.0.0-beta.0",
     "css-loader": "^5.0.2",
-    "cypress": "^6.4.0",
+    "cypress": "^7.2.0",
     "dotenv": "8.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
@@ -117,10 +117,10 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0",
-    "husky": "^5.0.9",
-    "jest": "26.6.3",
+    "husky": "^6.0.0",
+    "jest": "^26.6.3",
     "jest-fetch-mock": "^3.0.3",
-    "msw": "^0.26.1",
+    "msw": "^0.28.2",
     "next-secure-headers": "^2.2.0",
     "node-sass": "^5.0.0",
     "prettier": "2.2.1",
@@ -128,7 +128,7 @@
     "style-loader": "^2.0.0",
     "ts-jest": "26.5.0",
     "ts-node": "~9.1.1",
-    "typescript": "~4.1.3",
+    "typescript": "^4.2.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.36.1",
     "webpack-cli": "^4.6.0",
