--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ RABBITMQ_PORT=5672
 LDAP_USER_GROUP=
 
 CSRF_SECRET="P*3NGEEaJV3yUGDJA9428EQRg!ad"
-NEXT_PUBLIC_SYSTEM_VERSION="release-2.1.0"
+NEXT_PUBLIC_SYSTEM_VERSION=latest
 TESTING=false
 
 # session timeout in seconds
