--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 services:
   mongodb:
-    image: mongo:latest
+    image: mongo:4.4.6-bionic
     container_name: mongodb
     restart: always
     networks:
