--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "nx": "nx",
-    "start": "nx serve",
+    "start": "nx serve --port 5200",
     "start:debug": "cd apps/artemis-web && NODE_OPTIONS='--inspect' next dev -p 4200",
     "build": "nx build",
     "test": "nx test",
@@ -101,6 +101,7 @@
     "@typescript-eslint/eslint-plugin": "4.15.0",
     "@typescript-eslint/parser": "4.15.0",
     "@webpack-cli/generators": "^2.0.0",
+    "autoprefixer": "^10.2.6",
     "babel-jest": "26.6.3",
     "babel-loader": "^8.0.0-beta.0",
     "css-loader": "^5.0.2",
@@ -123,9 +124,11 @@
     "msw": "^0.28.2",
     "next-secure-headers": "^2.2.0",
     "node-sass": "^5.0.0",
+    "postcss": "^8.3.5",
     "prettier": "2.2.1",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^2.2.4",
     "ts-jest": "26.5.0",
     "ts-node": "~9.1.1",
     "typescript": "^4.2.4",
