--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.7",
+    "@headlessui/react": "^1.3.0",
+    "@heroicons/react": "^1.0.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
     "@types/jsonwebtoken": "^8.5.0",
