--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-ios-switch": "^0.1.19",
     "react-media": "^2.0.0-rc.1",
     "react-minimal-datetime-range": "^1.6.0",
+    "react-router-dom": "^5.2.0",
     "react-spring": "^8.0.27",
     "react-toastify": "^7.0.3",
     "react-toolkit": "^2.0.0-alpha.3",
