--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "chance": "^1.1.7",
     "codemirror": "^5.59.2",
     "cross-fetch": "^3.0.6",
+    "cypress-plugin-snapshots": "^1.4.4",
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
     "graphql": "^15.3.0",
