--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.34",
     "@types/react-bootstrap-table-next": "^4.0.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "amqp-ts": "^1.8.0",
     "argon2": "^0.27.0",
     "chance": "^1.1.7",
