--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,7 @@ tasks:
   - init: yarn install --frozen-lockfile
     command: |
       export $(cat .env | grep -v "#" | xargs)
-      MONGODB_HOST=localhost ./apps/artemis-web/scripts/wait-for -h ${MONGODB_HOST} -p ${MONGODB_PORT} -t 0
+      MONGODB_HOST=localhost ./apps/artemis-web/scripts/wait-for -h localhost -p ${MONGODB_PORT} -t 0
       MONGODB_HOST=localhost node apps/artemis-web/scripts/query.js
       MONGODB_HOST=localhost LDAP_HOST=localhost yarn run start
   - init: |
