--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,9 +6,7 @@ tasks:
       mkdir -p /workspace/data && mongod --dbpath /workspace/data &
       sleep 5
       if [ -f .env ]; then export $(cat .env | sed 's/#.*//g' | xargs); fi
-      mongo admin --eval "db.createUser({user:'"$MONGODB_USER"',pwd:'"$MONGODB_PASS"',roles:[{role:'root',db:'admin'}]})"
-      killall mongod
-    command: mongod --auth --dbpath /workspace/data
+    command: mongo admin --eval "db.createUser({user:'"$MONGODB_USER"',pwd:'"$MONGODB_PASS"',roles:[{role:'root',db:'admin'}]})"
 
   - init: yarn install --frozen-lockfile
     command: |
