--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,6 +16,12 @@ tasks:
 ports:
   - port: 4200
     onOpen: open-browser
+  - port: 5900
+    onOpen: ignore
+  - port: 6080
+    onOpen: open-browser
+  - port: 10000
+    onOpen: ignore
 github:
   prebuilds:
     # enable for the master/default branch (defaults to true)
