--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cypress-plugin-snapshots": "^1.4.4",
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
+    "express-rate-limit": "^5.3.0",
     "graphql": "^15.3.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.0",
