--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "prettier",
+    "plugin:@next/next/recommended"
   ],
   "rules": {
     "@typescript-eslint/explicit-member-accessibility": "off",
