--- a/apps/artemis-web/.babelrc
+++ b/apps/artemis-web/.babelrc
@@ -1,6 +1,33 @@
 {
   "presets": [
-    "next/babel"
+    [
+      "@babel/preset-env",
+      {
+        "modules": false
+      }
+    ],
+    "@babel/preset-react",
+    "@babel/preset-typescript"
   ],
-  "plugins": []
+  "plugins": [
+    [
+      "@babel/proposal-class-properties",
+      {
+        "loose": false
+      }
+    ],
+    "@babel/proposal-object-rest-spread",
+    [
+      "@babel/plugin-proposal-private-property-in-object",
+      {
+        "loose": false
+      }
+    ],
+    [
+      "@babel/plugin-proposal-private-methods",
+      {
+        "loose": false
+      }
+    ]
+  ]
 }
