--- a/apps/artemis-web/.eslintrc
+++ b/apps/artemis-web/.eslintrc
@@ -319,10 +319,10 @@
     }
   },
   "plugins": [
-    "import",
     "jsx-a11y",
     "react",
-    "react-hooks"
+    "react-hooks",
+    "import"
   ],
   "extends": [
     "../../.eslintrc"
