--- a/apps/artemis-web/babel-jest.config.json
+++ b/apps/artemis-web/babel-jest.config.json
@@ -10,5 +10,15 @@
     ],
     "@babel/preset-typescript",
     "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread",
+    [
+      "@babel/plugin-proposal-private-property-in-object",
+      {
+        "loose": false
+      }
+    ]
   ]
 }
