--- a/package.json
+++ b/package.json
@@ -48,15 +48,16 @@
     "jsonwebtoken": "^8.5.0",
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
-    "next": "^10.2.0",
-    "next-connect": "^0.10.1",
+    "next": "^11.1.2",
+    "next-connect": "^0.10.2",
     "next-csrf": "^0.1.1",
     "next-session": "^3.4.0",
+    "nx": "^12.9.0",
     "passport": "^0.4.1",
     "passport-ldapauth": "^3.0.1",
     "passport-local": "^1.0.0",
     "passport-remember-me": "0.0.1",
-    "react": "17.0.1",
+    "react": "^17.0.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
@@ -64,7 +65,7 @@
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-burger-menu": "^3.0.2",
     "react-codemirror2": "^7.2.1",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.2",
     "react-ios-switch": "^0.1.19",
     "react-media": "^2.0.0-rc.1",
     "react-minimal-datetime-range": "^1.6.0",
@@ -81,18 +82,20 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.40",
     "@babel/core": "^7.0.0-beta.40",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
     "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.0.0-beta.0",
-    "@babel/preset-typescript": "7.12.13",
-    "@nrwl/cypress": "11.2.10",
-    "@nrwl/eslint-plugin-nx": "11.2.10",
-    "@nrwl/jest": "11.2.10",
-    "@nrwl/next": "11.2.10",
-    "@nrwl/react": "11.2.10",
-    "@nrwl/web": "11.2.10",
-    "@nrwl/workspace": "11.2.10",
+    "@babel/preset-typescript": "^7.15.0",
+    "@next/eslint-plugin-next": "^11.1.2",
+    "@nrwl/cypress": "12.9.0",
+    "@nrwl/eslint-plugin-nx": "12.9.0",
+    "@nrwl/jest": "12.9.0",
+    "@nrwl/next": "12.9.0",
+    "@nrwl/react": "12.9.0",
+    "@nrwl/web": "12.9.0",
+    "@nrwl/workspace": "12.9.0",
     "@testing-library/react": "11.2.5",
     "@types/jest": "26.0.20",
     "@types/node": "~14.14.25",
@@ -104,6 +107,7 @@
     "@webpack-cli/generators": "^2.0.0",
     "babel-jest": "26.6.3",
     "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^5.0.2",
     "cypress": "^7.2.0",
     "dotenv": "8.2.0",
@@ -129,7 +133,7 @@
     "style-loader": "^2.0.0",
     "ts-jest": "26.5.0",
     "ts-node": "~9.1.1",
-    "typescript": "^4.2.4",
+    "typescript": "^4.4.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.36.1",
     "webpack-cli": "^4.6.0",
