--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongodb": "^3.5.34",
+    "@types/mongodb": "^4.0.7",
     "@types/react-bootstrap-table-next": "^4.0.3",
     "amqp-ts": "^1.8.0",
-    "argon2": "^0.27.0",
+    "argon2": "^0.28.2",
     "chance": "^1.1.7",
     "codemirror": "^5.59.2",
     "cross-fetch": "^3.0.6",
@@ -44,9 +44,9 @@
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
     "graphql": "^15.3.0",
-    "js-cookie": "^2.2.1",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.0",
-    "mongodb": "^3.5.2",
+    "mongodb": "^4.1.1",
     "nanoid": "^3.1.12",
     "next": "^11.1.2",
     "next-connect": "^0.10.2",
@@ -69,12 +69,12 @@
     "react-ios-switch": "^0.1.19",
     "react-media": "^2.0.0-rc.1",
     "react-minimal-datetime-range": "^1.6.0",
-    "react-spring": "^8.0.27",
-    "react-toastify": "^7.0.3",
+    "react-spring": "^9.2.4",
+    "react-toastify": "^8.0.2",
     "react-toolkit": "^2.0.0-alpha.3",
     "react-tooltip": "^4.2.11",
     "subscriptions-transport-ws": "^0.9.18",
-    "swr": "^0.4.2",
+    "swr": "^1.0.1",
     "tslib": "^2.1.0",
     "typescript-rabbitmq": "^0.0.8",
     "validator": "^13.1.17"
@@ -96,48 +96,48 @@
     "@nrwl/react": "12.9.0",
     "@nrwl/web": "12.9.0",
     "@nrwl/workspace": "12.9.0",
-    "@testing-library/react": "11.2.5",
-    "@types/jest": "26.0.20",
-    "@types/node": "~14.14.25",
+    "@testing-library/react": "12.1.0",
+    "@types/jest": "^27.0.1",
+    "@types/node": "~16.9.1",
     "@types/passport": "^1.0.4",
-    "@types/react": "17.0.1",
-    "@types/react-dom": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "4.15.0",
-    "@typescript-eslint/parser": "4.15.0",
+    "@types/react": "17.0.20",
+    "@types/react-dom": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "4.31.0",
+    "@typescript-eslint/parser": "4.31.0",
     "@webpack-cli/generators": "^2.0.0",
-    "babel-jest": "26.6.3",
+    "babel-jest": "^27.0.1",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "css-loader": "^5.0.2",
-    "cypress": "^7.2.0",
-    "dotenv": "8.2.0",
+    "css-loader": "^6.2.0",
+    "cypress": "^8.3.1",
+    "dotenv": "10.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
-    "eslint": "7.19.0",
-    "eslint-config-prettier": "7.2.0",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "2.24.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-react": "7.25.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0",
-    "husky": "^6.0.0",
-    "jest": "^26.6.3",
+    "husky": "^7.0.2",
+    "jest": "^27.0.1",
     "jest-fetch-mock": "^3.0.3",
-    "msw": "^0.28.2",
+    "msw": "^0.35.0",
     "next-secure-headers": "^2.2.0",
-    "node-sass": "^5.0.0",
-    "prettier": "2.2.1",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "ts-jest": "26.5.0",
-    "ts-node": "~9.1.1",
+    "node-sass": "^6.0.1",
+    "prettier": "2.4.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "ts-jest": "^27.0.0-next.12",
+    "ts-node": "~10.2.1",
     "typescript": "^4.4.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.36.1",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.2.0"
   },
   "husky": {
     "hooks": {
