--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-toastify": "^8.0.2",
     "react-toolkit": "^2.0.0-alpha.3",
     "react-tooltip": "^4.2.11",
+    "sharp": "^0.29.1",
     "subscriptions-transport-ws": "^0.9.18",
     "swr": "^1.0.1",
     "tslib": "^2.1.0",
