--- a/package.json
+++ b/package.json
@@ -24,19 +24,18 @@
     "update": "nx migrate latest",
     "workspace-schematic": "nx workspace-schematic",
     "dep-graph": "nx dep-graph",
-    "help": "nx help",
-    "reactide-server": "webpack-dev-server --config reactide.config.js --mode development --hot"
+    "help": "nx help"
   },
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.3.7",
+    "@apollo/client": "^3.4.16",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongodb": "^3.5.34",
     "@types/react-bootstrap-table-next": "^4.0.3",
     "amqp-ts": "^1.8.0",
-    "argon2": "^0.27.0",
+    "argon2": "^0.28.2",
     "chance": "^1.1.7",
     "codemirror": "^5.59.2",
     "cross-fetch": "^3.0.6",
@@ -50,15 +49,15 @@
     "lambda-captcha": "^2.1.2",
     "mongodb": "^3.5.2",
     "nanoid": "^3.1.12",
-    "next": "^10.2.0",
+    "next": "^11.1.2",
     "next-connect": "^0.10.1",
     "next-csrf": "^0.1.1",
-    "next-session": "^3.4.0",
-    "passport": "^0.4.1",
+    "next-session": "^4.0.2",
+    "passport": "^0.5.0",
     "passport-ldapauth": "^3.0.1",
     "passport-local": "^1.0.0",
     "passport-remember-me": "0.0.1",
-    "react": "17.0.1",
+    "react": "^17.0.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
@@ -66,7 +65,7 @@
     "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-burger-menu": "^3.0.2",
     "react-codemirror2": "^7.2.1",
-    "react-dom": "17.0.1",
+    "react-dom": "^17.0.2",
     "react-ios-switch": "^0.1.19",
     "react-media": "^2.0.0-rc.1",
     "react-minimal-datetime-range": "^1.6.0",
@@ -81,20 +80,21 @@
     "validator": "^13.1.17"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.40",
-    "@babel/core": "^7.0.0-beta.40",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0-beta.0",
-    "@babel/preset-typescript": "7.12.13",
-    "@nrwl/cypress": "11.2.10",
-    "@nrwl/eslint-plugin-nx": "11.2.10",
-    "@nrwl/jest": "11.2.10",
-    "@nrwl/next": "11.2.10",
-    "@nrwl/react": "11.2.10",
-    "@nrwl/web": "11.2.10",
-    "@nrwl/workspace": "11.2.10",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@nrwl/cli": "^12.9.0",
+    "@nrwl/cypress": "^12.9.0",
+    "@nrwl/eslint-plugin-nx": "^12.9.0",
+    "@nrwl/jest": "^12.9.0",
+    "@nrwl/next": "^12.9.0",
+    "@nrwl/react": "^12.9.0",
+    "@nrwl/web": "^12.9.0",
+    "@nrwl/workspace": "^12.9.0",
     "@testing-library/react": "11.2.5",
     "@types/jest": "26.0.20",
     "@types/node": "~14.14.25",
@@ -129,13 +129,13 @@
     "prettier": "2.2.1",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
-    "ts-jest": "26.5.0",
-    "ts-node": "~9.1.1",
-    "typescript": "^4.2.4",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3",
     "url-loader": "^4.1.1",
-    "webpack": "^5.36.1",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.57.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.1"
   },
   "husky": {
     "hooks": {
