--- a/package.json
+++ b/package.json
@@ -29,62 +29,62 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.16",
-    "@material-ui/core": "^4.11.0",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongodb": "^3.5.34",
-    "@types/react-bootstrap-table-next": "^4.0.3",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/mongodb": "^4.0.7",
+    "@types/react-bootstrap-table-next": "^4.0.16",
     "amqp-ts": "^1.8.0",
     "argon2": "^0.28.2",
-    "chance": "^1.1.7",
-    "codemirror": "^5.59.2",
-    "cross-fetch": "^3.0.6",
+    "chance": "^1.1.8",
+    "codemirror": "^5.63.1",
+    "cross-fetch": "^3.1.4",
     "cypress-plugin-snapshots": "^1.4.4",
     "diff_match_patch": "^0.1.1",
     "draft-js": "^0.11.7",
-    "express-rate-limit": "^5.3.0",
-    "graphql": "^15.3.0",
-    "js-cookie": "^2.2.1",
-    "jsonwebtoken": "^8.5.0",
+    "express-rate-limit": "^5.4.1",
+    "graphql": "^15.6.1",
+    "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "lambda-captcha": "^2.1.2",
-    "mongodb": "^3.5.2",
-    "nanoid": "^3.1.12",
+    "mongodb": "^4.1.3",
+    "nanoid": "^3.1.29",
     "next": "^11.1.2",
-    "next-connect": "^0.10.1",
-    "next-csrf": "^0.1.1",
+    "next-connect": "^0.10.2",
+    "next-csrf": "^0.1.2",
     "next-session": "^4.0.2",
     "passport": "^0.5.0",
     "passport-ldapauth": "^3.0.1",
     "passport-local": "^1.0.0",
-    "passport-remember-me": "0.0.1",
+    "passport-remember-me": "^0.0.1",
     "react": "^17.0.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-bootstrap-table2-toolkit": "^2.1.3",
-    "react-burger-menu": "^3.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
     "react-ios-switch": "^0.1.19",
-    "react-media": "^2.0.0-rc.1",
+    "react-media": "^1.10.0",
     "react-minimal-datetime-range": "^1.6.0",
-    "react-spring": "^8.0.27",
-    "react-toastify": "^7.0.3",
-    "react-toolkit": "^2.0.0-alpha.3",
-    "react-tooltip": "^4.2.11",
-    "subscriptions-transport-ws": "^0.9.18",
-    "swr": "^0.4.2",
-    "tslib": "^2.1.0",
+    "react-spring": "^9.2.6",
+    "react-toastify": "^8.0.3",
+    "react-toolkit": "^2.0.0-alpha.6",
+    "react-tooltip": "^4.2.21",
+    "subscriptions-transport-ws": "^0.9.19",
+    "swr": "^1.0.1",
+    "tslib": "^2.3.1",
     "typescript-rabbitmq": "^0.0.8",
-    "validator": "^13.1.17"
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.5",
+    "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@nrwl/cli": "^12.9.0",
@@ -95,47 +95,48 @@
     "@nrwl/react": "^12.9.0",
     "@nrwl/web": "^12.9.0",
     "@nrwl/workspace": "^12.9.0",
-    "@testing-library/react": "11.2.5",
-    "@types/jest": "26.0.20",
-    "@types/node": "~14.14.25",
-    "@types/passport": "^1.0.4",
-    "@types/react": "17.0.1",
-    "@types/react-dom": "17.0.0",
-    "@typescript-eslint/eslint-plugin": "4.15.0",
-    "@typescript-eslint/parser": "4.15.0",
-    "@webpack-cli/generators": "^2.0.0",
-    "babel-jest": "26.6.3",
-    "babel-loader": "^8.0.0-beta.0",
-    "css-loader": "^5.0.2",
-    "cypress": "^7.2.0",
-    "dotenv": "8.2.0",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.3",
+    "@types/passport": "^1.0.7",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "@webpack-cli/generators": "^2.4.0",
+    "babel-jest": "^27.2.4",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
+    "cypress": "^8.5.0",
+    "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
-    "eslint": "7.19.0",
-    "eslint-config-prettier": "7.2.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.22.0",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.0.0",
-    "husky": "^6.0.0",
-    "jest": "^26.6.3",
+    "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.2",
+    "jest": "^27.2.4",
     "jest-fetch-mock": "^3.0.3",
-    "msw": "^0.28.2",
+    "msw": "^0.35.0",
     "next-secure-headers": "^2.2.0",
-    "node-sass": "^5.0.0",
-    "prettier": "2.2.1",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
+    "node-sass": "^6.0.1",
+    "prettier": "^2.4.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.57.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.1"
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1",
+    "yarn-upgrade-all": "^0.5.4"
   },
   "husky": {
     "hooks": {
