--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-codemirror2": "^7.2.1",
     "react-dom": "^17.0.2",
     "react-ios-switch": "^0.1.19",
-    "react-media": "^2.0.0-rc.1",
+    "react-media": "^1.10.0",
     "react-minimal-datetime-range": "^1.6.0",
     "react-spring": "^9.2.4",
     "react-toastify": "^8.0.2",
