--- a/package.json
+++ b/package.json
@@ -54,9 +54,9 @@
     "next": "^11.1.2",
     "next-connect": "^0.10.2",
     "next-csrf": "^0.1.1",
-    "next-session": "^3.4.0",
+    "next-session": "^4.0.2",
     "nx": "^12.9.0",
-    "passport": "^0.4.1",
+    "passport": "^0.5.0",
     "passport-ldapauth": "^3.0.1",
     "passport-local": "^1.0.0",
     "passport-remember-me": "0.0.1",
@@ -84,8 +84,8 @@
     "validator": "^13.1.17"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.40",
-    "@babel/core": "^7.0.0-beta.40",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
     "@babel/plugin-transform-runtime": "^7.4.4",
