--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next-csrf": "^0.1.2",
     "next-session": "^4.0.2",
     "nx": "^12.10.0",
+    "passport": "^0.5.0",
     "passport-ldapauth": "^3.0.1",
     "passport-local": "^1.0.0",
     "passport-remember-me": "^0.0.1",
@@ -71,10 +72,10 @@
     "react-ios-switch": "^0.1.19",
     "react-media": "^1.10.0",
     "react-minimal-datetime-range": "^1.6.0",
-    "react-spring": "^9.2.4",
-    "react-toastify": "^8.0.2",
-    "react-toolkit": "^2.0.0-alpha.3",
-    "react-tooltip": "^4.2.11",
+    "react-spring": "^9.3.0",
+    "react-toastify": "^8.0.3",
+    "react-toolkit": "^2.0.0-alpha.6",
+    "react-tooltip": "^4.2.21",
     "sharp": "^0.29.1",
     "subscriptions-transport-ws": "^0.9.18",
     "swr": "^1.0.1",
@@ -83,64 +84,64 @@
     "validator": "^13.1.17"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.40",
-    "@babel/core": "^7.0.0-beta.40",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.15.6",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.0.0-beta.0",
     "@babel/preset-typescript": "^7.15.0",
     "@next/eslint-plugin-next": "^11.1.2",
-    "@nrwl/cypress": "12.9.0",
-    "@nrwl/eslint-plugin-nx": "12.9.0",
-    "@nrwl/jest": "12.9.0",
-    "@nrwl/next": "12.9.0",
-    "@nrwl/react": "12.9.0",
-    "@nrwl/web": "12.9.0",
-    "@nrwl/workspace": "12.9.0",
-    "@testing-library/react": "12.1.0",
-    "@types/jest": "^27.0.1",
-    "@types/node": "~16.9.1",
+    "@nrwl/cypress": "12.10.0",
+    "@nrwl/eslint-plugin-nx": "12.10.0",
+    "@nrwl/jest": "12.10.0",
+    "@nrwl/next": "12.10.0",
+    "@nrwl/react": "12.10.0",
+    "@nrwl/web": "12.10.0",
+    "@nrwl/workspace": "12.10.0",
+    "@testing-library/react": "12.1.2",
+    "@types/jest": "^27.0.2",
+    "@types/node": "~16.11.0",
     "@types/passport": "^1.0.4",
-    "@types/react": "17.0.20",
+    "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "4.31.0",
-    "@typescript-eslint/parser": "4.31.0",
-    "@webpack-cli/generators": "^2.0.0",
-    "babel-jest": "^27.0.1",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
+    "@webpack-cli/generators": "^2.4.0",
+    "babel-jest": "^27.2.5",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "css-loader": "^6.2.0",
-    "cypress": "^8.3.1",
+    "css-loader": "^6.4.0",
+    "cypress": "^8.6.0",
     "dotenv": "10.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
-    "eslint": "7.32.0",
+    "eslint": "8.0.1",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.25.1",
+    "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0",
     "husky": "^7.0.2",
-    "jest": "^27.0.1",
+    "jest": "^27.2.5",
     "jest-fetch-mock": "^3.0.3",
     "msw": "^0.35.0",
     "next-secure-headers": "^2.2.0",
     "node-sass": "^6.0.1",
-    "prettier": "2.4.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "ts-jest": "^27.0.0-next.12",
-    "ts-node": "~10.2.1",
-    "typescript": "^4.4.3",
+    "prettier": "2.4.1",
+    "sass-loader": "^12.2.0",
+    "style-loader": "^3.3.0",
+    "ts-jest": "^27.0.6",
+    "ts-node": "~10.3.0",
+    "typescript": "^4.4.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.36.1",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.2.0"
+    "webpack": "^5.58.2",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   },
   "husky": {
     "hooks": {
