--- a/package.json
+++ b/package.json
@@ -117,7 +117,7 @@
     "dotenv": "10.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
-    "eslint": "8.0.1",
+    "eslint": "^8.0.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.25.2",
