--- a/apps/artemis-web/Dockerfile
+++ b/apps/artemis-web/Dockerfile
@@ -4,9 +4,7 @@ WORKDIR /app
 
 COPY package.json yarn.lock ./
 
-RUN yarn install --frozen-lockfile
-
-RUN yarn cache clean
+RUN yarn install --frozen-lockfile && yarn cache clean
 
 COPY . .
 
